[gd_scene load_steps=4 format=3 uid="uid://n6wj65tbb7lk"]

[ext_resource type="Script" uid="uid://x4j41033ig2s" path="res://scripts/player_ui.gd" id="1_cfom6"]
[ext_resource type="Texture2D" uid="uid://cm1o6sw5x40yg" path="res://assets/placeholders/skill_bar.png" id="2_vq5xy"]
[ext_resource type="PackedScene" uid="uid://b7lw4cw31pi2t" path="res://scenes/skill_button.tscn" id="3_ehg4m"]

[node name="PlayerUI" type="CanvasLayer"]
script = ExtResource("1_cfom6")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="SkillBar" type="Sprite2D" parent="Control"]
position = Vector2(361, 288)
texture = ExtResource("2_vq5xy")

[node name="Slot01" type="Marker2D" parent="Control/SkillBar"]
position = Vector2(-76, 0)

[node name="Slot02" type="Marker2D" parent="Control/SkillBar"]
position = Vector2(-57, 0)

[node name="Slot03" type="Marker2D" parent="Control/SkillBar"]
position = Vector2(-38, 0)

[node name="Slot04" type="Marker2D" parent="Control/SkillBar"]
position = Vector2(-19, 0)

[node name="Slot05" type="Marker2D" parent="Control/SkillBar"]

[node name="Slot06" type="Marker2D" parent="Control/SkillBar"]
position = Vector2(19, 0)

[node name="Slot07" type="Marker2D" parent="Control/SkillBar"]
position = Vector2(38, 0)

[node name="Slot08" type="Marker2D" parent="Control/SkillBar"]
position = Vector2(57, 0)

[node name="Slot09" type="Marker2D" parent="Control/SkillBar"]
position = Vector2(76, 0)

[node name="EndTurnButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 62.0
offset_top = 121.0
offset_right = 152.0
offset_bottom = 152.0
text = "END TURN"

[node name="NextBar" type="Button" parent="Control"]
layout_mode = 0
offset_left = 454.0
offset_top = 273.0
offset_right = 472.0
offset_bottom = 304.0
text = ">"

[node name="PrevBar" type="Button" parent="Control"]
layout_mode = 0
offset_left = 246.0
offset_top = 272.0
offset_right = 264.0
offset_bottom = 303.0
text = "<"

[node name="CurrentBarLabel" type="Label" parent="Control"]
layout_mode = 0
offset_left = 355.0
offset_top = 314.0
offset_right = 365.0
offset_bottom = 337.0
text = "X"

[node name="SkillButton" parent="Control" instance=ExtResource("3_ehg4m")]
layout_mode = 1

[connection signal="pressed" from="Control/EndTurnButton" to="." method="_on_end_turn_button_pressed"]
[connection signal="pressed" from="Control/NextBar" to="." method="_on_next_bar_pressed"]
[connection signal="pressed" from="Control/PrevBar" to="." method="_on_prev_bar_pressed"]
